--- a/cymanlibssid/src/main/res/layout/activity_sign_up_step_one.xml
+++ b/cymanlibssid/src/main/res/layout/activity_sign_up_step_one.xml
@@ -7,19 +7,34 @@
     tools:context=".activity.SignUpStepOneActivity">
 
 
-
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="none">
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:fillViewport="true"
+        android:scrollbars="none"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginTop="20dp"
             android:background="@color/transparent"
             android:focusable="true"
             android:focusableInTouchMode="true">
+
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/fingerprint_back_ll_img"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.32999998" />
+
 
             <cyman.libssid.util.CustomTextInputLayout
                 android:id="@+id/first_name_textInput_layout"
@@ -29,14 +44,14 @@
 
                 android:layout_gravity="center_horizontal"
                 android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginEnd="15dp"
                 android:background="@drawable/textinput_bottom_line"
                 android:foregroundGravity="center"
                 android:gravity="center"
                 android:inputType="textCapSentences"
-                android:textSize="14sp"
                 android:textColorHint="@color/black_input_hint"
+                android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -48,14 +63,17 @@
                     android:layout_marginBottom="15dp"
                     android:background="@null"
                     android:hint="@string/email"
-                    android:singleLine="true"
-                    android:lines="1"
-                    android:textStyle="bold"
-                    android:inputType="textEmailAddress|textNoSuggestions"
-                    android:paddingTop="15dp"
+                    android:focusable="false"
+                    android:editable="false"
                     android:imeOptions="actionNext"
+                    android:inputType="textEmailAddress|textNoSuggestions"
+                    android:lines="1"
+                    android:paddingTop="15dp"
+                    android:singleLine="true"
                     android:textColor="@color/black_input_value"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    tools:ignore="Deprecated" />
             </cyman.libssid.util.CustomTextInputLayout>
 
 
@@ -76,14 +94,14 @@
 
                 android:layout_gravity="center_horizontal"
                 android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"
                 android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
                 android:background="@drawable/textinput_bottom_line"
                 android:foregroundGravity="center"
                 android:gravity="center"
                 android:inputType="textCapSentences"
-                android:textSize="14sp"
                 android:textColorHint="@color/black_input_hint"
+                android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/country_code_picker">
@@ -94,17 +112,21 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="15dp"
                     android:background="@null"
+                    android:digits="0123456789"
+                    android:ems="10"
+                    android:editable="false"
                     android:hint="@string/phone_number"
+                    android:imeOptions="actionNext"
                     android:inputType="phone"
+                    android:lines="1"
+                    android:focusable="false"
+                    android:maxLength="10"
                     android:paddingTop="15dp"
                     android:singleLine="true"
-                    android:lines="1"
-                    android:textStyle="bold"
-                    android:digits="0123456789"
-                    android:maxLength="10"
-                    android:imeOptions="actionNext"
                     android:textColor="@color/black_input_value"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    tools:ignore="Deprecated" />
             </cyman.libssid.util.CustomTextInputLayout>
 
 
@@ -113,17 +135,17 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:visibility="gone"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"
                 android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
                 android:background="@drawable/textinput_bottom_line"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:textColorHint="@color/black_input_hint"
                 android:inputType="textCapSentences"
+                android:textColorHint="@color/black_input_hint"
                 android:textSize="14sp"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/middle_name_textInput_layout">
@@ -135,34 +157,31 @@
                     android:layout_marginBottom="15dp"
                     android:background="@null"
                     android:hint="@string/component_issued_id"
+                    android:imeOptions="actionNext"
+                    android:inputType="textNoSuggestions"
+                    android:lines="1"
                     android:paddingTop="15dp"
                     android:singleLine="true"
-                    android:lines="1"
-                    android:inputType="textNoSuggestions"
-                    android:imeOptions="actionNext"
                     android:textColor="@color/black_input_value"
                     android:textSize="15sp" />
             </cyman.libssid.util.CustomTextInputLayout>
-
 
 
             <TextView
                 android:id="@+id/tv_login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="35dp"
                 android:layout_marginTop="50dp"
                 android:background="@drawable/btn_background_oval"
                 android:elevation="5dp"
                 android:ems="6"
                 android:gravity="center"
-                android:paddingBottom="10dp"
                 android:paddingTop="10dp"
+                android:paddingBottom="10dp"
                 android:text="@string/next"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/last_name_textInput_layout" />
