--- a/cymanlibssid/src/main/res/layout/activity_phone_login.xml
+++ b/cymanlibssid/src/main/res/layout/activity_phone_login.xml
@@ -1,27 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:scrollbars="none"
+    android:fillViewport="true"
     tools:context=".activity.SignUpStepOneActivity">
 
 
-    <ScrollView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:fillViewport="true"
-        android:scrollbars="none"
-        android:id="@+id/scrollView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="20dp"
+            
             android:background="@color/transparent"
             android:focusable="true"
             android:focusableInTouchMode="true">
@@ -38,24 +31,24 @@
 
 
             <cyman.libssid.util.CustomTextInputLayout
-                android:id="@+id/first_name_textInput_layout"
+                android:id="@+id/email_textInput_layout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginStart="15dp"
-                android:layout_marginTop="10dp"
                 android:layout_marginEnd="15dp"
+                android:layout_marginBottom="16dp"
                 android:background="@drawable/textinput_bottom_line"
                 android:foregroundGravity="center"
                 android:gravity="center"
                 android:inputType="textCapSentences"
                 android:textColorHint="@color/black_input_hint"
                 android:textSize="14sp"
-                android:visibility="gone"
+                android:visibility="visible"
+                app:layout_constraintBottom_toTopOf="@+id/phoneno_textInput_layout"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintStart_toStartOf="parent">
 
                 <EditText
                     android:id="@+id/email_edittext"
@@ -78,39 +71,27 @@
             </cyman.libssid.util.CustomTextInputLayout>
 
 
-            <com.hbb20.CountryCodePicker
-                android:id="@+id/country_code_picker"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginEnd="16dp"
-                android:visibility="gone"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/first_name_textInput_layout" />
-
             <cyman.libssid.util.CustomTextInputLayout
-                android:id="@+id/middle_name_textInput_layout"
+                android:id="@+id/phoneno_textInput_layout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
 
                 android:layout_gravity="center_horizontal"
                 android:layout_marginStart="15dp"
-                android:layout_marginTop="15dp"
                 android:layout_marginEnd="15dp"
+                android:layout_marginBottom="32dp"
                 android:background="@drawable/textinput_bottom_line"
                 android:foregroundGravity="center"
                 android:gravity="center"
                 android:inputType="textCapSentences"
                 android:textColorHint="@color/black_input_hint"
                 android:textSize="14sp"
+                android:visibility="visible"
                 app:layout_constraintBottom_toTopOf="@+id/tv_login"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintStart_toStartOf="parent">
 
                 <EditText
                     android:id="@+id/phone_edittext"
@@ -135,43 +116,6 @@
             </cyman.libssid.util.CustomTextInputLayout>
 
 
-            <cyman.libssid.util.CustomTextInputLayout
-                android:id="@+id/last_name_textInput_layout"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginEnd="15dp"
-                android:background="@drawable/textinput_bottom_line"
-                android:foregroundGravity="center"
-                android:gravity="center"
-                android:inputType="textCapSentences"
-                android:textColorHint="@color/black_input_hint"
-                android:textSize="14sp"
-                android:visibility="gone"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/middle_name_textInput_layout">
-
-                <EditText
-                    android:id="@+id/component_id_edittext"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="15dp"
-                    android:background="@null"
-                    android:hint="@string/component_issued_id"
-                    android:imeOptions="actionNext"
-                    android:inputType="textNoSuggestions"
-                    android:lines="1"
-                    android:paddingTop="15dp"
-                    android:singleLine="true"
-                    android:textColor="@color/black_input_value"
-                    android:textSize="15sp" />
-            </cyman.libssid.util.CustomTextInputLayout>
-
-
             <TextView
                 android:id="@+id/tv_login"
                 android:layout_width="wrap_content"
@@ -183,13 +127,15 @@
                 android:gravity="center"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:text="@string/next"
+                android:text="@string/login"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/last_name_textInput_layout" />
+                app:layout_constraintTop_toTopOf="parent" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -197,10 +143,9 @@
 
 
 
-    </ScrollView>
 
 
 
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
